[package]
name = "nil-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN Data plane node: MASQUE/CONNECT-IP server + exit. Runs in a TEE; keeps NO disk logs."

[features]
# Synthetic RA-TLS report (test/dev) so the Docker harness can attest without TEE hardware.
# A real deployment fetches a hardware SEV-SNP/TDX report instead; never ship this.
synthetic-attest = ["nil-attest/synthetic"]
# Production: fetch a real SEV-SNP/TDX report from the kernel (Linux configfs-TSM). No extra
# deps (plain std fs). Compile-checked in CI; only EXERCISED on real TEE hardware.
hw-attest = []

[dependencies]
nil-core = { workspace = true }
nil-transport = { workspace = true, features = ["pqwg"] }  # connectip + PQ-WireGuard responder core
nil-attest = { workspace = true }      # shared RA-TLS binding/codec (anti-drift with the client)
nil-crypto = { workspace = true }      # PQ hybrid PSK responder (KEM encapsulate)
boringtun = { workspace = true }        # WireGuard static keys (x25519)
quiche = { workspace = true }
tun-rs = { workspace = true }
rcgen = { workspace = true }
getrandom = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# wstunnel responder (WireGuard over WebSocket-over-TLS)
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }
