[package]
name = "nil-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN Data plane node: MASQUE/CONNECT-IP server + exit. Runs in a TEE; keeps NO disk logs."

[features]
# Synthetic RA-TLS report (test/dev) so the Docker harness can attest without TEE hardware.
# A real deployment fetches a hardware SEV-SNP/TDX report instead; never ship this.
synthetic-attest = ["nil-attest/synthetic"]
# Production: fetch a real SEV-SNP/TDX report from the kernel (Linux configfs-TSM). No extra
# deps (plain std fs). Compile-checked in CI; only EXERCISED on real TEE hardware.
hw-attest = []
# DEV/STAGING ONLY: compile in PII-free data-plane diagnostic counters (per-role forwarding
# packet/byte counts) to localize where traffic dies in the onion. NEVER shipped to production —
# `attest.rs` `compile_error!`s on `dev-trace + hw-attest`, and prod images build `hw-attest` only.
dev-trace = ["nil-transport/dev-trace"]

[dependencies]
nil-core = { workspace = true }
nil-transport = { workspace = true, features = ["pqwg", "wstunnel", "reality"] }  # connectip + PQ-WireGuard responder + shared wstunnel path derivation + reality VLESS auth/record codec
nil-attest = { workspace = true }      # shared RA-TLS binding/codec (anti-drift with the client)
nil-crypto = { workspace = true }      # PQ hybrid PSK responder (KEM encapsulate)
boringtun = { workspace = true }        # WireGuard static keys (x25519)
sha2 = { workspace = true }             # HMAC for stateless QUIC Retry address-validation tokens
subtle = { workspace = true }           # constant-time byte comparison (grant nonce, auth path)
quiche = { workspace = true }
tun-rs = { workspace = true }
rcgen = { workspace = true }
getrandom = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# wstunnel responder (WireGuard over WebSocket-over-TLS)
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }

# UDP GSO (generic segmentation offload) for the egress hot path — batch many equal-size QUIC
# packets to one peer into a single sendmsg (a big per-node throughput win, Tailscale-proven). Linux
# kernel feature; the code is cfg(target_os="linux") with a per-packet fallback, so this dep is
# Linux-only and other targets keep the plain path.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["net", "uio"] }  # net → UDP_SEGMENT cmsg + addr conversions; uio → sendmsg/ControlMessage
