[package]
name = "nil-portal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN Business plane: Axum REST API — accounts, billing, Privacy Pass issuer."

[dependencies]
nil-core = { workspace = true }     # durable one-token-per-payment + account stores
nil-crypto = { workspace = true }
nil-proto = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Talk to the self-hosted monero-wallet-rpc. rustls (not OpenSSL) to match the project's TLS.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
