[package]
name = "nil-portal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN Business plane: Axum REST API — accounts, billing, Privacy Pass issuer."

[features]
default = []
# Clustered, durable Postgres-backed account store (PgStore). Off by default — the default
# build ships the file-backed durable store and pulls no database driver.
postgres = ["dep:tokio-postgres"]
# Card payments via a Merchant-of-Record (Paddle / Lemon Squeezy): a signed webhook marks a
# checkout reference paid/revoked, mirroring the Monero watcher. Off by default — Monero-only build
# pulls no HMAC deps. Sell strictly as a "VPN software subscription" (MoR AUP forbids "donation").
card-payments = ["dep:hmac", "dep:subtle"]
# HSM/KMS-backed issuer key via PKCS#11 (SoftHSM in test/CI, a real HSM in prod): the RSA private
# key never leaves the device — the Portal blind-signs by asking the HSM to do a raw RSA op
# (CKM_RSA_X_509), closing the plaintext-key-on-disk risk. Off by default (in-memory Issuer).
hsm = ["dep:cryptoki", "dep:rsa"]

[dependencies]
nil-core = { workspace = true }     # durable one-token-per-payment + account stores
nil-crypto = { workspace = true }
nil-proto = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }   # CSPRNG for server-minted checkout references
sha2 = { workspace = true }        # hash the payment<->account binding (subscription, ADR-0007)
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Talk to the self-hosted monero-wallet-rpc. rustls (not OpenSSL) to match the project's TLS.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Clustered account store (PgStore), behind the `postgres` feature.
tokio-postgres = { workspace = true, optional = true }
# Card (Merchant-of-Record) webhook signature verification, behind the `card-payments` feature.
hmac = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
# PKCS#11 client for the HSM-backed issuer key, behind the `hsm` feature.
cryptoki = { version = "0.12", optional = true }
# Build a SubjectPublicKeyInfo DER from the HSM public key's (modulus, exponent), behind `hsm`.
rsa = { version = "0.9", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
