[package]
name = "nil-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN transport trait — the single seam between the engine and any tunnel."

[features]
default = []
# MASQUE/QUIC transport (quiche + BoringSSL → needs cmake to build). Off by default so
# crates that only need the trait + loopback (and the pure `connectip` framing) build light.
masque = ["dep:quiche", "dep:tokio-util", "dep:getrandom", "dep:nil-attest"]
# Test/dev only: accept synthetic attestation reports (for the Docker accept/reject harness).
# Never enable in a release client — the synthetic trust anchor is unreachable without it.
synthetic-attest = ["masque", "nil-attest/synthetic"]
# Inner PQ-WireGuard-over-MASQUE: a boringtun Noise core fed by the nil-crypto hybrid PSK,
# wrapping any inner Transport. (Spec §4.2; shares the PQ core with the Phase 4 cascade.)
pqwg = ["dep:boringtun", "dep:nil-crypto", "dep:getrandom"]

[dependencies]
nil-core = { workspace = true }
nil-attest = { workspace = true, optional = true }   # RA-TLS appraisal gate (with `masque`)
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
quiche = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
boringtun = { workspace = true, optional = true }       # WireGuard Noise core (pqwg)
nil-crypto = { workspace = true, optional = true }       # PQ hybrid PSK (pqwg)
