[package]
name = "nil-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN transport trait — the single seam between the engine and any tunnel."

[features]
default = []
# MASQUE/QUIC transport (quiche + BoringSSL → needs cmake to build). Off by default so
# crates that only need the trait + loopback (and the pure `connectip` framing) build light.
masque = ["dep:quiche", "dep:tokio-util", "dep:getrandom", "dep:nil-attest"]
# Test/dev only: accept synthetic attestation reports (for the Docker accept/reject harness).
# Never enable in a release client — the synthetic trust anchor is unreachable without it.
synthetic-attest = ["masque", "nil-attest/synthetic"]
# Inner PQ-WireGuard-over-MASQUE: a boringtun Noise core fed by the nil-crypto hybrid PSK,
# wrapping the MASQUE transport. (Spec §4.2; shares the PQ core with the Phase 4 cascade.)
pqwg = ["masque", "dep:boringtun", "dep:nil-crypto", "dep:getrandom", "dep:sha2"]
# wstunnel cascade rung: WireGuard (the pqwg core) carried over WebSocket-over-TLS — a distinct
# HTTPS-shaped wire fingerprint. The inner WireGuard provides the crypto/auth; the TLS is the
# obfuscation envelope.
wstunnel = ["pqwg", "dep:tokio-tungstenite", "dep:tokio-rustls", "dep:rustls", "dep:futures-util", "dep:hkdf"]
# REALITY/VLESS cascade rung: WireGuard (the pqwg core) carried inside a VLESS-shared-key-gated TLS
# session — the last-resort, real-TLS-shaped fallback. The inner WireGuard provides the crypto/auth;
# the TLS is the obfuscation envelope. See `src/reality.rs` for which REALITY properties are / are
# not yet achieved (the TLS is genuine self-signed, not a borrowed foreign-site handshake).
reality = ["pqwg", "dep:tokio-rustls", "dep:rustls", "dep:hkdf"]
# Network-aware selector: probe the path (one identity-free UDP/QUIC reachability datagram) and order
# the cascade fast-first (Clean) or resistant-first (Hostile). Pulls the full resistant rung set
# (reality ⇒ pqwg/masque, plus wstunnel) so enabling `selector` gives the whole dual-path cascade.
selector = ["reality", "wstunnel"]
# Fast-path performance: the CI throughput gate over the per-packet data-plane hotpath (asserts
# correctness + a coarse no-regression floor + no PII in bench output). The UDP GSO/GRO kernel
# batching it measures is a Linux-runtime follow-up (Linux-only + unsafe-syscall-heavy — not built
# blind on a non-Linux host, per PD-5).
fast-path = ["pqwg"]

[dependencies]
nil-core = { workspace = true }
nil-attest = { workspace = true, optional = true }   # RA-TLS appraisal gate (with `masque`)
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
quiche = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
boringtun = { workspace = true, optional = true }       # WireGuard Noise core (pqwg)
sha2 = { workspace = true, optional = true }             # derive per-deployment obfs magics (pqwg)
hkdf = { workspace = true, optional = true }             # derive the wstunnel secret request path (wstunnel)
nil-crypto = { workspace = true, optional = true }       # PQ hybrid PSK (pqwg)
tokio-tungstenite = { workspace = true, optional = true } # WebSocket (wstunnel)
tokio-rustls = { workspace = true, optional = true }     # TLS envelope (wstunnel)
rustls = { workspace = true, optional = true }           # no-verify client config (wstunnel)
futures-util = { workspace = true, optional = true }     # split the WS stream (wstunnel)

[dev-dependencies]
# A throwaway self-signed TLS cert for the in-crate wstunnel round-trip test's WS-TLS responder.
rcgen = { workspace = true }
