[package]
name = "nil-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN transport trait — the single seam between the engine and any tunnel."

[features]
default = []
# MASQUE/QUIC transport (quiche + BoringSSL → needs cmake to build). Off by default so
# crates that only need the trait + loopback (and the pure `connectip` framing) build light.
masque = ["dep:quiche", "dep:tokio-util", "dep:getrandom", "dep:nil-attest", "dep:boring"]
# Test/dev only: accept synthetic attestation reports (for the Docker accept/reject harness).
# Never enable in a release client — the synthetic trust anchor is unreachable without it.
synthetic-attest = ["masque", "nil-attest/synthetic"]
# Inner PQ-WireGuard-over-MASQUE: a boringtun Noise core fed by the nil-crypto hybrid PSK,
# wrapping the MASQUE transport. (Spec §4.2; shares the PQ core with the Phase 4 cascade.)
pqwg = ["masque", "dep:boringtun", "dep:nil-crypto", "dep:getrandom", "dep:sha2", "dep:zeroize"]
# Development-only fallback transports. These responders do not yet carry the same Coordinator
# grant + hardware-attestation contract as MASQUE, so they must never be present in a production
# artifact. `debug_assertions` compile guards in `lib.rs` enforce that even if a release command
# accidentally enables the feature.
dev-fallbacks = ["wstunnel", "reality"]
# Internal dependency feature for the wstunnel implementation. Consumers must enable
# `dev-fallbacks`, not this feature directly; `lib.rs` rejects the incomplete combination.
wstunnel = ["pqwg", "dep:tokio-tungstenite", "dep:tokio-rustls", "dep:rustls", "dep:futures-util", "dep:hkdf"]
# REALITY/VLESS cascade rung: WireGuard (the pqwg core) carried inside a VLESS-shared-key-gated TLS
# session — the last-resort, real-TLS-shaped fallback. The inner WireGuard provides the crypto/auth;
# the TLS is the obfuscation envelope. See `src/reality.rs` for which REALITY properties are / are
# not yet achieved (the TLS is genuine self-signed, not a borrowed foreign-site handshake).
reality = ["pqwg", "dep:tokio-rustls", "dep:rustls", "dep:hkdf"]
# Network-aware selector: probe the path (one identity-free UDP/QUIC reachability datagram) and order
# the cascade fast-first (Clean) or resistant-first (Hostile). Pulls the full resistant rung set
# (reality ⇒ pqwg/masque, plus wstunnel) so enabling `selector` gives the whole dual-path cascade.
selector = ["dev-fallbacks"]
# Development/CI-only fast-path performance gate over the AmneziaWG per-packet hotpath (asserts
# correctness + a coarse no-regression floor + no PII in bench output). It therefore selects the
# development fallback implementation it measures; that feature's optimized-build compile guard
# prevents this benchmark profile from entering a production artifact. UDP GSO/GRO remains a
# Linux-runtime follow-up (Linux-only + unsafe-syscall-heavy — not built blind, per PD-5).
fast-path = ["dev-fallbacks"]
# DEV/STAGING ONLY: PII-free data-plane diagnostic counters (client send/recv packet+byte counts,
# negotiated per-hop MTU) to localize where onion traffic dies. Pure marker — diagnostics live
# inside already-`masque`-gated code, log only counts/sizes/flow_id (never addresses/tokens, so
# `no_pii_in_logs` stays green). Never enabled in a release/prod build.
dev-trace = []
# Tier-2 traffic-analysis defense: drive Maybenot/DAITA padding (+blocking) state machines over the
# CONNECT-IP padding channel. Off by default — experimental, and the concrete defense-machine profile
# + efficacy evaluation are separate. Enabling it pulls the peer-reviewed `maybenot` framework.
daita = ["dep:maybenot", "dep:rand_core"]

[dependencies]
nil-core = { workspace = true }
nil-attest = { workspace = true, optional = true }   # RA-TLS appraisal gate (with `masque`)
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
quiche = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
boringtun = { workspace = true, optional = true }       # WireGuard Noise core (pqwg)
sha2 = { workspace = true, optional = true }             # derive per-deployment obfs magics (pqwg)
zeroize = { workspace = true, optional = true }          # scrub the raw WG key seed after use (pqwg)
hkdf = { workspace = true, optional = true }             # derive the wstunnel secret request path (wstunnel)
nil-crypto = { workspace = true, optional = true }       # PQ hybrid PSK (pqwg)
tokio-tungstenite = { workspace = true, optional = true } # WebSocket (wstunnel)
tokio-rustls = { workspace = true, optional = true }     # TLS envelope (wstunnel)
rustls = { workspace = true, optional = true }           # no-verify client config (wstunnel)
futures-util = { workspace = true, optional = true }     # split the WS stream (wstunnel)
boring = { workspace = true, optional = true }           # BoringSSL SslContextBuilder (masque: outer-ClientHello shaping)
maybenot = { workspace = true, optional = true }         # DAITA defense state-machine framework (daita)
rand_core = { version = "0.9", optional = true }         # RngCore bound for the DAITA framework (daita)

[dev-dependencies]
# A throwaway self-signed TLS cert for the in-crate wstunnel round-trip test's WS-TLS responder.
rcgen = { workspace = true }
# ClientHello fingerprint-parity harness (test-only): decrypt the QUIC v1 Initial NIL emits
# (RFC 9001 initial secrets: HKDF-SHA256 + AES-128-ECB header protection + AES-128-GCM) and parse
# the TLS ClientHello. Never in a release build.
hkdf = { workspace = true }
sha2 = { workspace = true }
aes = "0.9"
aes-gcm = "0.11"
# DAITA driver test: a seeded RNG + a hand-built defense machine (enum-map must match maybenot's 2.7).
rand = "0.10"
enum-map = "2.7"
